testsuite/tests/interpreter_errors/invalid_selector_binding/test.out
script.lkql:2:6: error: Unknown symbol: n
2 | when n
  |      ^
error: Errors during analysis
